--- a/七月/10-11.md
+++ b/七月/10-11.md
@@ -12,12 +12,23 @@
 
 ##### 学习
 
-- [yolov1详解_Fighting_1997的博客-CSDN博客_yolov1](https://blog.csdn.net/frighting_ing/article/details/123450918?ops_request_misc=&request_id=&biz_id=102&utm_term=YOLOv1&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-0-123450918.nonecase&spm=1018.2226.3001.4187) 
 - [[1506.02640\] You Only Look Once: Unified, Real-Time Object Detection (arxiv.org)](https://arxiv.org/abs/1506.02640) 论文
+
 - [pjreddie/darknet： Convolutional Neural Networks (github.com)](https://github.com/pjreddie/darknet) 源码
+
+  
+
+- [yolov1详解_Fighting_1997的博客-CSDN博客_yolov1](https://blog.csdn.net/frighting_ing/article/details/123450918?ops_request_misc=&request_id=&biz_id=102&utm_term=YOLOv1&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-0-123450918.nonecase&spm=1018.2226.3001.4187) 
+
+- [图解YOLO - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/24916786) 
+
+  - 这个里面的图确实不错 
+
 
 ### 额外
 
 - [WongKinYiu/yolov7: Implementation of paper - YOLOv7: Trainable bag-of-freebies sets new state-of-the-art for real-time object detectors (github.com)](https://github.com/WongKinYiu/yolov7) 
   - YOLOv7看着好像很强
 
+- [shanglianlm0525/PyTorch-Networks: Pytorch implementation of cnn network (github.com)](https://github.com/shanglianlm0525/PyTorch-Networks) 
+  - 里面有YOLO的pytorch实现，是学之前的网络找到的刚好翻到
