--- a/五月/5.16.md
+++ b/五月/5.16.md
@@ -59,7 +59,7 @@
 
 #### 代码
 
-- [PyTorch实现的GoogLeNet (InceptionV1)_mingo_敏的博客-CSDN博客_inceptionv1 pytorch](https://blog.csdn.net/shanglianlm/article/details/99005326?ops_request_misc=%7B%22request%5Fid%22%3A%22165268220216782425182091%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165268220216782425182091&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-3-99005326-null-null.142^v9^pc_search_result_cache,157^v4^control&utm_term=inceptionv1++pytorch&spm=1018.2226.3001.4187)
+- [PyTorch实现的GoogLeNet (InceptionV1)_mingo_敏的博客-CSDN博客_inceptionv1 pytorch](https://blog.csdn.net/shanglianlm/article/details/99005326?ops_request_misc=%7B%22request%5Fid%22%3A%22165268220216782425182091%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165268220216782425182091&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-3-99005326-null-null.142^v9^pc_search_result_cache,157^v4^control&utm_term=inceptionv1++pytorch&spm=1018.2226.3001.4187) 
   - 我觉得这个下面的代码块图非常不错
   - 尤其是这代码来自一个GitHub项目，里面有好多CNN的pytorch实现，非常棒
   - 但是我不是很清楚为什么要有中间模块InceptionAux这个辅助分类器，有空再想想
@@ -76,6 +76,7 @@
 
 # 玩
 
-- 最近在玩一个放置游戏……无敌套娃，剧情还是挺有意思的，刚好快通关了（**99.6%**），分享一下，适合学习时点几下~~分散注意力~~
-- **《Increlution》**，是steam上的，有汉化教程 [Increlution - Git游戏 - gityx.com (g8hh.com)](https://www.g8hh.com/#/game/increlution)
+- 最近在玩一个放置游戏……无敌套娃，剧情还是挺有意思的，刚好快通关了（**99.6%**），分享一下，适合学习时点几下~~分散注意力~~ 
+- **《Increlution》**，是steam上的，有汉化教程 [Increlution - Git游戏 - gityx.com (g8hh.com)](https://www.g8hh.com/#/game/increlution) 
+- （7.11回头看更新）这游戏嘿嘿，steam时长一千多了，天天挂着，刷世代也还行
 
