--- a/七月/9.md
+++ b/七月/9.md
@@ -39,6 +39,7 @@
 ###### NMS（nonmaximum suppression）非极大值抑制
 
 - [非极大值抑制（Non-Maximum Suppression，NMS） - 康行天下 - 博客园 (cnblogs.com)](https://www.cnblogs.com/makefile/p/nms.html) 
+- 今天（7.11）看YOLO好像也用到了
 
 ### 额外
 
