--- a/七月/10-11.md
+++ b/七月/10-11.md
@@ -10,6 +10,8 @@
 
 #### v1
 
+- 建议大家从头学起，打好一些基本功，以便于日后设计新的识别网络、发顶会或者工程化可以有清晰的思路。任何算法都需要自己理解并实现，简单的拿来主义并没有实质性的帮助。
+
 ##### 学习
 
 - [[1506.02640\] You Only Look Once: Unified, Real-Time Object Detection (arxiv.org)](https://arxiv.org/abs/1506.02640) 论文
@@ -24,8 +26,18 @@
 
   - 这个里面的图确实不错 
 
+### SSD（Single Shot MultiBox Detector）
 
-### 额外
+明天再细看吧，今天先把YOLO论文看看……
+
+#### 学习
+
+- [[1512.02325\] SSD: Single Shot MultiBox Detector (arxiv.org)](https://arxiv.org/abs/1512.02325) 论文
+- [目标检测SSD算法（新手入门）_ZhaoDongyu_AK47的博客-CSDN博客](https://blog.csdn.net/ZhaoDongyu_AK47/article/details/107952651?ops_request_misc=%7B%22request%5Fid%22%3A%22165754617816782395381207%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165754617816782395381207&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_click~default-2-107952651-null-null.142^v32^down_rank,185^v2^control&utm_term=SSD&spm=1018.2226.3001.4187) 
+- [目标检测之SSD_thisiszdy的博客-CSDN博客_ssd目标检测](https://blog.csdn.net/thisiszdy/article/details/89576389) 
+
+
+## 额外
 
 - [WongKinYiu/yolov7: Implementation of paper - YOLOv7: Trainable bag-of-freebies sets new state-of-the-art for real-time object detectors (github.com)](https://github.com/WongKinYiu/yolov7) 
   - YOLOv7看着好像很强
