--- a/七月/10-14.md
+++ b/七月/10-14.md
@@ -37,6 +37,16 @@
 - [目标检测SSD算法（新手入门）_ZhaoDongyu_AK47的博客-CSDN博客](https://blog.csdn.net/ZhaoDongyu_AK47/article/details/107952651?ops_request_misc=%7B%22request%5Fid%22%3A%22165754617816782395381207%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165754617816782395381207&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_click~default-2-107952651-null-null.142^v32^down_rank,185^v2^control&utm_term=SSD&spm=1018.2226.3001.4187) 
 - [目标检测之SSD_thisiszdy的博客-CSDN博客_ssd目标检测](https://blog.csdn.net/thisiszdy/article/details/89576389) 
 
+#### 术语
+
+##### 带孔卷积（空洞卷积）
+
+- [如何理解空洞卷积（dilated convolution）？ - 知乎 (zhihu.com)](https://www.zhihu.com/question/54149221) 
+  - 讲的是真的细，还有推荐阅读，虽然没去读
+- [dilated conv带孔卷积、pooling层提高感受野 反卷积 的理解_jiachen0212的博客-CSDN博客_带孔卷积](https://blog.csdn.net/jiachen0212/article/details/78548667?ops_request_misc=%7B%22request%5Fid%22%3A%22165780579916780366522248%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165780579916780366522248&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduend~default-2-78548667-null-null.142^v32^down_rank,185^v2^control&utm_term=带孔卷积&spm=1018.2226.3001.4187) 
+
+
+
 
 ## 额外
 
