--- a/七月/16.md
+++ b/七月/16.md
@@ -1,7 +1,18 @@
 # 机器学习
 
-### 汽车识别
+## 汽车识别
 
-#### YOLO
+### YOLO
 
-####
+#### v2
+
+##### 学习
+
+
+
+
+## pytorch
+
+### Visdom
+
+- [详解PyTorch可视化工具visdom（一）_奋斗の博客的博客-CSDN博客_visdom](https://blog.csdn.net/dongjinkun/article/details/114973401?ops_request_misc=%7B%22request%5Fid%22%3A%22165796111616782391854276%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165796111616782391854276&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_positive~default-1-114973401-null-null.142^v32^pc_rank_34,185^v2^control&utm_term=visdom&spm=1018.2226.3001.4187) 
