--- a/七月/16.md
+++ b/七月/16.md
@@ -4,9 +4,12 @@
 
 ### YOLO
 
-#### v2
+#### v2-9000
 
 ##### 学习
+
+- [[1612.08242\] YOLO9000: Better, Faster, Stronger (arxiv.org)](https://arxiv.org/abs/1612.08242) 9000的论文
+- 
 
 
 
