--- a/七月/19.md
+++ b/七月/19.md
@@ -6,3 +6,21 @@
 
 #### YOLOv5
 
+##### 学习
+
+- [yolov5/README_cn.md at master · ultralytics/yolov5 (github.com)](https://github.com/ultralytics/yolov5/blob/master/.github/README_cn.md) 源码
+- 没有论文
+
+- [深度学习经典论文（十一）YOLOv5_UHL1107的博客-CSDN博客](https://blog.csdn.net/UHL1107/article/details/115963894?ops_request_misc=%7B%22request%5Fid%22%3A%22165827383316780357274123%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165827383316780357274123&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~baidu_landing_v2~default-4-115963894-null-null.142^v32^pc_rank_34,185^v2^control&utm_term=YOLO5论文&spm=1018.2226.3001.4187) 
+- [【Yolov5】1.认真总结6000字Yolov5保姆级教程（全新版本2022.06.28）_若oo尘的博客-CSDN博客_yolov5流程图](https://blog.csdn.net/m0_53392188/article/details/119334634?ops_request_misc=%7B%22request%5Fid%22%3A%22165822528016782390561255%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165822528016782390561255&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_positive~default-1-119334634-null-null.142^v32^pc_rank_34,185^v2^control&utm_term=YOLOv5&spm=1018.2226.3001.4187) 
+- [深入浅出Yolo系列之Yolov5核心基础知识完整讲解_江大白*的博客-CSDN博客_yolov5](https://blog.csdn.net/nan355655600/article/details/107852353?ops_request_misc=%7B%22request%5Fid%22%3A%22165822528016782390561255%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165822528016782390561255&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_positive~default-2-107852353-null-null.142^v32^pc_rank_34,185^v2^control&utm_term=YOLOv5&spm=1018.2226.3001.4187) 
+- [目标检测---教你利用yolov5训练自己的目标检测模型_炮哥带你学的博客-CSDN博客_yolov5训练自己的模型](https://blog.csdn.net/didiaopao/article/details/119954291?ops_request_misc=%7B%22request%5Fid%22%3A%22165822528016782390561255%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165822528016782390561255&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_positive~default-3-119954291-null-null.142^v32^pc_rank_34,185^v2^control&utm_term=YOLOv5&spm=1018.2226.3001.4187) 
+
+上面的有些偏原理，有些偏实战
+
+##### 术语
+
+###### Mosaic数据增强
+
+- [数据增强之Mosaic （Mixup,Cutout,CutMix） - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/405639109) 
+
