--- a/七月/19.md
+++ b/七月/19.md
@@ -24,3 +24,23 @@
 
 - [数据增强之Mosaic （Mixup,Cutout,CutMix） - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/405639109) 
 
+###### Focus结构
+
+- [yolov5中的Focus模块的理解_三叔家的猫的博客-CSDN博客_focus结构](https://blog.csdn.net/qq_39056987/article/details/112712817?ops_request_misc=%7B%22request%5Fid%22%3A%22165827772316780366510694%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165827772316780366510694&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_positive~default-1-112712817-null-null.142^v32^pc_rank_34,185^v2^control&utm_term=Focus结构&spm=1018.2226.3001.4187) 
+  - 通过切片操作使得一层结构替代了原来的三层卷积，达到提速的目的
+  - 听说又改回去了……
+
+###### CSP结构
+
+- [YOLOv5中的CSP结构_tt丫的博客-CSDN博客_csp结构](https://blog.csdn.net/weixin_55073640/article/details/122614176?ops_request_misc=%7B%22request%5Fid%22%3A%22165827771116782388013793%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165827771116782388013793&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~pc_rank_34-1-122614176-null-null.142^v32^pc_rank_34,185^v2^control&utm_term=Focus结构、CSP结构&spm=1018.2226.3001.4187) 
+
+CSPNet  经典BackBone
+- [1911.11929.pdf (arxiv.org)](https://arxiv.org/pdf/1911.11929.pdf) 论文
+- [WongKinYiu/CrossStagePartialNetworks: Cross Stage Partial Networks (github.com)](https://github.com/WongKinYiu/CrossStagePartialNetworks) 
+
+
+
+
+
+
+
