--- a/七月/19.md
+++ b/七月/19.md
@@ -35,8 +35,12 @@
 - [YOLOv5中的CSP结构_tt丫的博客-CSDN博客_csp结构](https://blog.csdn.net/weixin_55073640/article/details/122614176?ops_request_misc=%7B%22request%5Fid%22%3A%22165827771116782388013793%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165827771116782388013793&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~pc_rank_34-1-122614176-null-null.142^v32^pc_rank_34,185^v2^control&utm_term=Focus结构、CSP结构&spm=1018.2226.3001.4187) 
 
 CSPNet  经典BackBone
+
+- [CV 经典主干网络 (Backbone) 系列: CSPNet_kuweicai的博客-CSDN博客_cspnet结构](https://blog.csdn.net/kuweicai/article/details/121303895?ops_request_misc=%7B%22request%5Fid%22%3A%22165830648316782246459598%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165830648316782246459598&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_click~default-2-121303895-null-null.142^v32^pc_rank_34,185^v2^control&utm_term=CSPNet&spm=1018.2226.3001.4187) 
 - [1911.11929.pdf (arxiv.org)](https://arxiv.org/pdf/1911.11929.pdf) 论文
 - [WongKinYiu/CrossStagePartialNetworks: Cross Stage Partial Networks (github.com)](https://github.com/WongKinYiu/CrossStagePartialNetworks) 
+- 是基于DenseNet的一种改进网络……好多新网络a我慢慢看吧，先跳过了，放个链接
+- [DenseNet：比ResNet更优的CNN模型 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/37189203) 
 
 
 
