--- a/五月/5.16.md
+++ b/五月/5.16.md
@@ -79,4 +79,5 @@
 - 最近在玩一个放置游戏……无敌套娃，剧情还是挺有意思的，刚好快通关了（**99.6%**），分享一下，适合学习时点几下~~分散注意力~~ 
 - **《Increlution》**，是steam上的，有汉化教程 [Increlution - Git游戏 - gityx.com (g8hh.com)](https://www.g8hh.com/#/game/increlution) 
 - （7.11回头看更新）这游戏嘿嘿，steam时长一千多了，天天挂着，刷世代也还行
+- （7.20回头）懒得玩这个了……乖乖学
 
