--- a/七月/19.md
+++ b/七月/19.md
@@ -42,6 +42,10 @@ CSPNet  经典BackBone
 - 是基于DenseNet的一种改进网络……好多新网络a我慢慢看吧，先跳过了，放个链接
 - [DenseNet：比ResNet更优的CNN模型 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/37189203) 
 
+###### FPN
+
+- [FPN(Feature Pyramid Networks) 网络_kuweicai的博客-CSDN博客_fpn网络](https://blog.csdn.net/kuweicai/article/details/105301792?ops_request_misc=%7B%22request%5Fid%22%3A%22163593301916780357233216%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fblog.%22%7D&request_id=163593301916780357233216&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~blog~first_rank_v2~rank_v29-1-105301792.pc_v2_rank_blog_default&utm_term=fpn&spm=1018.2226.3001.4450) 
+
 
 
 
