--- a/七月/19.md
+++ b/七月/19.md
@@ -30,7 +30,7 @@
   - 通过切片操作使得一层结构替代了原来的三层卷积，达到提速的目的
   - 听说又改回去了……
 
-###### CSP结构
+###### CSP结构（待看）
 
 - [YOLOv5中的CSP结构_tt丫的博客-CSDN博客_csp结构](https://blog.csdn.net/weixin_55073640/article/details/122614176?ops_request_misc=%7B%22request%5Fid%22%3A%22165827771116782388013793%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=165827771116782388013793&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~pc_rank_34-1-122614176-null-null.142^v32^pc_rank_34,185^v2^control&utm_term=Focus结构、CSP结构&spm=1018.2226.3001.4187) 
 
@@ -42,9 +42,10 @@ CSPNet  经典BackBone
 - 是基于DenseNet的一种改进网络……好多新网络a我慢慢看吧，先跳过了，放个链接
 - [DenseNet：比ResNet更优的CNN模型 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/37189203) 
 
-###### FPN
+###### FPN （待看）
 
 - [FPN(Feature Pyramid Networks) 网络_kuweicai的博客-CSDN博客_fpn网络](https://blog.csdn.net/kuweicai/article/details/105301792?ops_request_misc=%7B%22request%5Fid%22%3A%22163593301916780357233216%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fblog.%22%7D&request_id=163593301916780357233216&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~blog~first_rank_v2~rank_v29-1-105301792.pc_v2_rank_blog_default&utm_term=fpn&spm=1018.2226.3001.4450) 
+- [详解FPN网络_越来越胖的GuanRunwei的博客-CSDN博客_fpn](https://blog.csdn.net/qq_38890412/article/details/120776777?ops_request_misc=&request_id=&biz_id=102&utm_term=FPN&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-1-120776777.142^v32^pc_rank_34,185^v2^control&spm=1018.2226.3001.4187) 
 
 
 
