--- a/七月/19-21.md
+++ b/七月/19-21.md
@@ -47,7 +47,7 @@ CSPNet  经典BackBone
 - [FPN(Feature Pyramid Networks) 网络_kuweicai的博客-CSDN博客_fpn网络](https://blog.csdn.net/kuweicai/article/details/105301792?ops_request_misc=%7B%22request%5Fid%22%3A%22163593301916780357233216%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fblog.%22%7D&request_id=163593301916780357233216&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~blog~first_rank_v2~rank_v29-1-105301792.pc_v2_rank_blog_default&utm_term=fpn&spm=1018.2226.3001.4450) 
 - [详解FPN网络_越来越胖的GuanRunwei的博客-CSDN博客_fpn](https://blog.csdn.net/qq_38890412/article/details/120776777?ops_request_misc=&request_id=&biz_id=102&utm_term=FPN&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-1-120776777.142^v32^pc_rank_34,185^v2^control&spm=1018.2226.3001.4187) 
 
-#### DenseNet
+#### DenseNet（7.21补）
 
 ##### 学习
 
