--- a/七月/22.md
+++ b/七月/22.md
@@ -8,3 +8,11 @@
 
 - [CV 经典主干网络 (Backbone) 系列: CSPNet_kuweicai的博客-CSDN博客_cspnet结构](https://blog.csdn.net/kuweicai/article/details/121303895?ops_request_misc={"request_id"%3A"165830648316782246459598"%2C"scm"%3A"20140713.130102334.."}&request_id=165830648316782246459598&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_click~default-2-121303895-null-null.142^v32^pc_rank_34,185^v2^control&utm_term=CSPNet&spm=1018.2226.3001.4187) 
 
+### 数据集数据标注
+
+#### labelimg
+
+- [目标检测---利用labelimg制作自己的深度学习目标检测数据集_炮哥带你学的博客-CSDN博客](https://blog.csdn.net/didiaopao/article/details/119808973?ops_request_misc=%7B%22request%5Fid%22%3A%22165845614016781683928525%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165845614016781683928525&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_positive~default-1-119808973-null-null.142^v33^pc_rank_34,185^v2^control&utm_term=labelimg&spm=1018.2226.3001.4187) 
+  - 包括了下载和基本使用知识
+- [LabelImg如何使用？快捷键操作_hywmj的博客-CSDN博客_labelimg快捷键](https://blog.csdn.net/wangmj_hdu/article/details/116992986?ops_request_misc=%7B%22request%5Fid%22%3A%22165853816816782246498542%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=165853816816782246498542&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduend~default-1-116992986-null-null.142^v33^pc_rank_34,185^v2^control&utm_term=打开labelimg&spm=1018.2226.3001.4187) 
+
