--- a/七月/22.md
+++ b/七月/22.md
@@ -4,9 +4,37 @@
 
 #### CSPNet（Cross Stage Partial Network）
 
+是一种处理的思想，将feature map拆成两个部分，一部分进行卷积操作，另一部分和上一部分卷积操作的结果进行concat
+
+从实验结果来看，分类问题中，使用CSPNet可以降低计算量，但是准确率提升很小；在目标检测问题中，使用CSPNet作为Backbone带来的提升比较大，可以有效增强CNN的学习能力，同时也降低了计算量
+
 ##### 学习
 
+- [1911.11929.pdf (arxiv.org)](https://arxiv.org/pdf/1911.11929.pdf) 论文
+
+- [WongKinYiu/CrossStagePartialNetworks: Cross Stage Partial Networks (github.com)](https://github.com/WongKinYiu/CrossStagePartialNetworks) 源码
+
+  
+
 - [CV 经典主干网络 (Backbone) 系列: CSPNet_kuweicai的博客-CSDN博客_cspnet结构](https://blog.csdn.net/kuweicai/article/details/121303895?ops_request_misc={"request_id"%3A"165830648316782246459598"%2C"scm"%3A"20140713.130102334.."}&request_id=165830648316782246459598&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~top_click~default-2-121303895-null-null.142^v32^pc_rank_34,185^v2^control&utm_term=CSPNet&spm=1018.2226.3001.4187) 
+
+- [深度学习之CSPNet网络分析_曙光_deeplove的博客-CSDN博客_cspnet](https://blog.csdn.net/yangjinyi1314/article/details/124750477?ops_request_misc=&request_id=&biz_id=102&utm_term=CSPNet&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduweb~default-1-124750477.142^v33^pc_rank_34,185^v2^control&spm=1018.2226.3001.4187) 
+
+- [YOLOv5中的CSP结构_tt丫的博客-CSDN博客_csp结构](https://blog.csdn.net/weixin_55073640/article/details/122614176?ops_request_misc={"request_id"%3A"165827771116782388013793"%2C"scm"%3A"20140713.130102334.pc_all."}&request_id=165827771116782388013793&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~pc_rank_34-1-122614176-null-null.142^v32^pc_rank_34,185^v2^control&utm_term=Focus结构、CSP结构&spm=1018.2226.3001.4187) 
+
+##### 术语
+
+###### anchor-free
+
+CenterNet和CornerNet Lite
+
+###### AlexeyAB
+
+
+
+###### Partial Dense Block
+
+CIO
 
 ### 数据集数据标注
 
