--- a/九月/30.md
+++ b/九月/30.md
@@ -9,7 +9,10 @@
 #### 任务
 
 - 每次尽量自行完成作业的代码部分
-- 根据飞桨上的零基础transformer项目作为十月份的任务
+- 根据飞桨上的零基础transformer项目作为十月份的任务 
+  - [飞桨AI Studio - 人工智能学习实训社区 (baidu.com)](https://aistudio.baidu.com/aistudio/education/group/info/25102) 
+  - [GitHub - BR-IDL/PaddleViT: PaddleViT: State-of-the-art Visual Transformer and MLP Models for PaddlePaddle 2.0+](https://github.com/BR-IDL/PaddleViT) 
+
 - 学习部分git的用法
 - 暂时就这些
 
