--- a/十月/3.md
+++ b/十月/3.md
@@ -1,2 +1,12 @@
+# 机器学习
 
+## 飞桨学习
 
+### Transformer
+
+#### python学习
+
+- flatten和reshape函数
+  - [关于张量的Flatten、Reshape和Squeeze的解释 | Pytorch系列（六）_flyfor2013的博客-CSDN博客](https://blog.csdn.net/flyfor2013/article/details/105697518?ops_request_misc=%7B%22request%5Fid%22%3A%22166480118116782414912228%22%2C%22scm%22%3A%2220140713.130102334..%22%7D&request_id=166480118116782414912228&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~sobaiduend~default-2-105697518-null-null.142^v51^control,201^v3^control_1&utm_term=reshape和flatten&spm=1018.2226.3001.4187) 
+- 函数注释
+  - [【Python语法】类型提示(self, nums: List[int\]) -＞ List[int]，报错NameError: name ‘List‘ is not defined解决_一个甜甜的大橙子的博客-CSDN博客](https://blog.csdn.net/chengyikang20/article/details/124778296?ops_request_misc=%7B%22request%5Fid%22%3A%22166481906716800180648098%22%2C%22scm%22%3A%2220140713.130102334.pc%5Fall.%22%7D&request_id=166481906716800180648098&biz_id=0&utm_medium=distribute.pc_search_result.none-task-blog-2~all~first_rank_ecpm_v1~rank_v31_ecpm-1-124778296-null-null.142^v51^control,201^v3^control_2&utm_term=def minAddToMakeValid(self%2C s%3A str) -> int%3A&spm=1018.2226.3001.4187) 
