--- a/十月/13.md
+++ b/十月/13.md
@@ -34,24 +34,19 @@
       f_i(z_i)
       $$
 
-    - 后面项为 :                                                                                                            P(z1……zN)
+    - 后面项为 :                                                                                                 P(z1……zN)
 
-    =
-    $$
-    Σ_{z_1=1}^{k}{Σ_{z_2=1}^{k}{……Σ_{z_1=N}^{k}}}(Σ_{i=1}^{N}f_i(z_i))*P(z_1…z_N)
-    $$
-    =
-    $$
-    Σ_{z_1=1}^{k}{Σ_{z_2=1}^{k}{……Σ_{z_1=N}^{k}}}(f_1(z_1)*p(z_1…z_N)+……
-    $$
-    =
-    $$
-    Σ_{z_1=1}^{k}f_1(z_1)*p(z_1)+……
-    $$
-    =
-    $$
-    Σ_{i=1}^{N}{Σ_{z_i=1}^{k}}(logα_{z_i}+logN(x_i|μ_{z_i},Σ_{z_i}))p(z_i|x_i,θ^{(g)})
-    $$
+    - $$
+      \begin{aligned} 
+      上式
+      &=Σ_{z_1=1}^{k}{Σ_{z_2=1}^{k}{……Σ_{z_1=N}^{k}}}(Σ_{i=1}^{N}f_i(z_i))*P(z_1…z_N) \\
+      &=Σ_{z_1=1}^{k}{Σ_{z_2=1}^{k}{……Σ_{z_1=N}^{k}}}(f_1(z_1)*p(z_1…z_N)+……\\
+      &=Σ_{z_1=1}^{k}f_1(z_1)*p(z_1)+……\\
+      &=Σ_{i=1}^{N}{Σ_{z_i=1}^{k}}(logα_{z_i}+logN(x_i|μ_{z_i},Σ_{z_i}))p(z_i|x_i,θ^{(g)})
+      \end{aligned}
+      $$
+
+    
 
 - **M步骤**
 
