--- a/十月/13.md
+++ b/十月/13.md
@@ -29,11 +29,12 @@
     Σ_{z_1=1}^{k}{Σ_{z_2=1}^{k}{……Σ_{z_1=N}^{k}}}(Σ_{i=1}^{N}[log{α_{z_i}}+log{N(x_i|{μ_{z_i}},Σ_{z_i})}]∏_{i=1}^{N}P(z_i|x_i,θ^{(g)}))
     $$
 
-    - 取中间项为 :
+    - 取中间两求和项为 : 
       $$
       f_i(z_i)
       $$
-
+      
+      
     - 后面项为 :                                                                                                 P(z1……zN)
 
     - $$
